[gd_scene load_steps=5 format=2]

[ext_resource path="res://common/world/coin/coin.tscn" type="PackedScene" id=1]
[ext_resource path="res://common/world/wall/wall.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 26, 632 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 1280 )

[node name="Wall" type="StaticBody2D" groups=["walls"]]
collision_layer = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
Coin = ExtResource( 1 )

[node name="UpperCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -800 )
shape = SubResource( 3 )

[node name="LowerCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 800 )
shape = SubResource( 3 )

[node name="PointArea" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PointArea"]
shape = SubResource( 2 )

[node name="CoinRespawnTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[connection signal="body_entered" from="PointArea" to="." method="_on_PointArea_body_entered"]
[connection signal="timeout" from="CoinRespawnTimer" to="." method="_on_CoinRespawnTimer_timeout"]
